[package]
name = "opd-parser"
description = "Parser for the OPD point cloud animation format"
version = "0.1.1"
edition = "2021"
authors = [
    "Zhixing Zhang <zhixing.zhang@foresightmining.com>"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ForesightMiningSoftwareCorporation/opd_parser"


[dependencies]
nom = "7"
glam = { version = "0.22", features = ["serde"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
